# composer

./: Cargo.toml  release-plz.toml
.github/workflows/: release-plz.yml  release.yml  rust.yml
cli/: CHANGELOG.md  Cargo.toml
cli/src/types/: echo.rs  mod.rs
composer-primitives/: CHANGELOG.md  Cargo.toml
echo-library/: CHANGELOG.md  Cargo.toml
echo-library/src/common/: boilerplate.rs  composer.rs  mod.rs  parse_module.rs  starlark_modules.rs
