[package]
name = "composer-cli"
authors.workspace = true
version.workspace = true
edition.workspace = true
repository.workspace = true
license = "Apache-2.0"
description = "composer is tool to build workflow using echo config files"

[package.metadata.wix]
upgrade-guid = "2242B0E7-4997-48B2-BAC8-DEEAC0E4AE70"
path-guid = "D6440E95-99AA-4005-A9F3-9064DAB70465"
license = false
eula = false


[lib]
path = "src/lib.rs"

[[bin]]
name = "composer"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.137", optional = true, features = ["derive"] }
thiserror = "1.0"
tempfile = "3.2.0"
itertools = "0.12.1"
walkdir = "2"
anyhow = "1.0.65"
echo-library = "0.0.4"
composer-primitives = "0.0.3"
sys-info = "0.9.1"

[dependencies.clap]
version = "4.5.0"
features = ["derive", "env"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
